Add documentation springFox and Swagger ui